# SeaLantern

./: .SRCINFO  .gitignore  .oxlintrc.json  AI_GUIDE.md  CONTRIBUTING.md  Cargo.toml  PKGBUILD  README-en.md  README.md  index.html  package-lock.json  package.json  release.bat  rustfmt.toml  sealantern.desktop  sealantern.install  vite.config.ts
.github/workflows/: aur-actions.md  aur-publish.yml  check.yml  release.yml
docs/: AI_GUIDE.md  CONTRIBUTING-en.md  CONTRIBUTING.md  Project Structure.md  STRUCTURE-en.md  STRUCTURE.md  i18n-help.md  i18n-list.md  新手使用教程.html  项目结构.txt
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: config.rs  downloader.rs  java.rs  mod.rs  player.rs  server.rs  settings.rs  system.rs  update.rs
src-tauri/src/models/: server.rs  settings.rs
src-tauri/src/services/: config_parser.rs  download_manager.rs  global.rs  i18n.rs  java_detector.rs  java_installer.rs  mod.rs  player_manager.rs  server_manager.rs  settings_manager.rs
src-tauri/src/services/download/: download_manager.rs  java_installer.rs  starter_installer_links.rs
src-tauri/src/services/server/: downloader.rs  installer.rs  log_pipeline.rs  manager.rs
src-tauri/src/utils/: constants.rs  downloader.rs  mod.rs
src/api/: config.ts  downloader.ts  java.ts  remoteLocales.ts  server.ts  settings.ts  system.ts  tauri.ts  update.ts
src/components/: JavaDownloader.vue  index.ts
src/composables/: useAsync.ts  useMessage.ts  useTabIndicator.ts  useToast.ts
(+117 files in other folders)
